[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    # There is no fundamental reason to pin this CMake version, beyond
    # build stability.
    "cmake",
    "ninja",
    # MLIR build depends.
    "numpy",
    "packaging",
    "pybind11>=2.10.1",
    "PyYAML",
    "requests",
]
build-backend = "setuptools.build_meta"
