[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake",
    # Note that the compiler wheel does not presently need nanobind, but
    # it's build is enabled by the same flag which enables the runtime
    # configuration, which does.
    "nanobind==1.9.2",
    "ninja",
    # MLIR build depends.
    "numpy",
    "packaging",
    "pybind11>=2.10.1",
    "PyYAML",
]
build-backend = "setuptools.build_meta"
