[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    # There is no fundamental reason to pin this CMake version, beyond
    # build stability.
    "cmake==3.22.2",
    "ninja==1.10.2",
    "packaging",
    "pybind11>=2.10.1",
    "PyYAML",
    "requests",
]
build-backend = "setuptools.build_meta"
